--- a/timeline/App_Resources/Android/src/main/res/values-v21/styles.xml
+++ b/timeline/App_Resources/Android/src/main/res/values-v21/styles.xml
@@ -4,7 +4,7 @@
     <!-- Application theme -->
     <style name="AppThemeBase21" parent="AppThemeBase">
         <!-- Uncomment this to make the app show underneat the status bar -->
-        <!-- <item name="android:windowTranslucentStatus">true</item> -->
+        <item name="android:windowTranslucentStatus">true</item>
 
         <item name="android:datePickerStyle">@style/SpinnerDatePicker</item>
         <item name="android:timePickerStyle">@style/SpinnerTimePicker</item>
@@ -29,6 +29,6 @@
         <item name="android:elevation">4dp</item>
 
         <!-- Add padding to the ActionBar - useful when android:windowTranslucentStatus is set to true -->
-        <!-- <item name="android:paddingTop">24dp</item> -->
+        <item name="android:paddingTop">24dp</item>
     </style>
 </resources>
